--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     },
     "require": {
         "zircote/swagger-php": "^6.0",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "firebase/php-jwt": "^7.0"
     }
 }
