--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "zircote/swagger-php": "^6.0",
         "vlucas/phpdotenv": "^5.6",
-        "firebase/php-jwt": "^7.0"
+        "firebase/php-jwt": "^7.0",
+        "phpmailer/phpmailer": "^7.0"
     }
 }
