--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "zircote/swagger-php": "^6.0",
         "vlucas/phpdotenv": "^5.6",
         "firebase/php-jwt": "^7.0",
-        "phpmailer/phpmailer": "^7.0"
+        "phpmailer/phpmailer": "^7.0",
+        "twilio/sdk": "^8.10"
     }
 }
