minimas correciones y configurando archivos para iniciar via Docker

--- a/.htaccess
+++ b/.htaccess
@@ -6,7 +6,7 @@
 
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.+?)/?$ router.php?url=$1 [L,QSA,B]
+    RewriteRule ^(.+?)/?$ index.php?url=$1 [L,QSA,B]
 
     Options -Indexes
 
